--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^22.13.13",
     "eslint": "^9.23.0",
     "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.5",
     "eslint-plugin-security-node": "^1.1.4",
     "globals": "^16.0.0",
     "nodemon": "^3.1.9",
