--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "dev": "nodemon",
+    "dev:watch": "nodemon",
+    "dev": "npx ts-node  -r tsconfig-paths/register src/index.ts",
     "start": "node index.js"
   },
   "keywords": [],
@@ -13,20 +14,27 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.23.0",
+    "@types/eslint-plugin-security": "^3.0.0",
     "@types/node": "^22.13.13",
     "eslint": "^9.23.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.5",
+    "eslint-plugin-promise": "^7.2.1",
     "eslint-plugin-security-node": "^1.1.4",
     "globals": "^16.0.0",
     "nodemon": "^3.1.9",
+    "pino-pretty": "^13.0.0",
     "prettier": "^3.5.3",
     "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "tslib": "^2.8.1",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.28.0"
   },
   "dependencies": {
-    "fastify": "^5.2.2"
+    "close-with-grace": "^2.2.0",
+    "dotenv": "^16.4.7",
+    "fastify": "^5.2.2",
+    "pino": "^9.6.0"
   }
 }
