--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "API simples para gerenciamento de usuários",
   "main": "index.js",
   "scripts": {
-    "build": "tsc -p tsconfig.json",
-    "dev:watch": "nodemon",
-    "dev": "npx ts-node  -r tsconfig-paths/register src/index.ts",
-    "start": "node index.js"
+    "build": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json",
+    "dev:watch": "nodemon --exec 'ts-node -r tsconfig-paths/register' src/index.ts",
+    "dev": "npx ts-node  -r tsconfig-paths/register src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +25,7 @@
     "pino-pretty": "^13.0.0",
     "prettier": "^3.5.3",
     "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.12",
     "tsconfig-paths": "^4.2.0",
     "tslib": "^2.8.1",
     "typescript": "^5.8.2",
