--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "close-with-grace": "^2.2.0",
     "dotenv": "^16.4.7",
     "fastify": "^5.2.2",
+    "knex": "^3.1.0",
     "pino": "^9.6.0"
   }
 }
