--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "build": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json",
     "dev:watch": "nodemon --exec 'ts-node -r tsconfig-paths/register' src/index.ts",
-    "dev": "npx ts-node  -r tsconfig-paths/register src/index.ts"
+    "dev": "npx ts-node  -r tsconfig-paths/register src/index.ts",
+    "knex:migrate": "npx knex migrate:latest",
+    "knex:rollback": "npx knex migrate:rollback"
   },
   "keywords": [],
   "author": "",
