--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "typescript-eslint": "^8.28.0"
   },
   "dependencies": {
+    "argon2": "^0.41.1",
     "close-with-grace": "^2.2.0",
     "dotenv": "^16.4.7",
     "fastify": "^5.2.2",
