--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@eslint/js": "^9.23.0",
     "@types/eslint-plugin-security": "^3.0.0",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.13.13",
     "eslint": "^9.23.0",
     "eslint-config-prettier": "^10.1.1",
@@ -38,6 +39,7 @@
     "close-with-grace": "^2.2.0",
     "dotenv": "^16.4.7",
     "fastify": "^5.2.2",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "pg": "^8.14.1",
     "pino": "^9.6.0"
