--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@eslint/js": "^9.23.0",
     "@types/eslint-plugin-security": "^3.0.0",
+    "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.13.13",
     "eslint": "^9.23.0",
@@ -38,6 +39,7 @@
     "argon2": "^0.41.1",
     "close-with-grace": "^2.2.0",
     "dotenv": "^16.4.7",
+    "express": "^5.1.0",
     "fastify": "^5.2.2",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
